--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pixel Quest</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="sources/style.css">
 </head>
 <body>
     <header>
@@ -22,6 +22,6 @@
         <div id="game"></div>
     </main>
 
-    <script src="game.js"></script>
+    <script src="sources/game.js"></script>
 </body>
 </html>
