l'installation du temps de js test db

--- a/game.html
+++ b/game.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pixel Quest</title>
-    <link rel="stylesheet" href="sources/style.css">
+    <link rel="stylesheet" href="sources/game.css">
 </head>
 <body>
     <header>
+        <h4 class="return"><a href="index.php">Retour Accueil</a></h4>
         <h1>Pixel Quest</h1>
     </header>
 
